--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 uvicorn==0.34.3
+python-jose==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.9
